syntax = "proto3";
package com.seta.taxi;

message Ride {
  uint32 id = 1;

  message Position {
    uint32 x = 1;
    uint32 y = 2;
  }

  Position startingPosition = 2;
  Position destinationPosition = 3;
}

message Election {

  Ride ride = 1;

  message Criteria {
    double distance = 2;
    uint32 batteryLevel = 3;
    uint32 taxiId = 4;
  }

  Criteria criteria = 2;
}

message Elected {
  Ride ride = 1;
  uint32 taxiId = 2;
}

message ElectionResponse {
  uint32 taxiId = 1;
}

service RideService {
  rpc elect(Election) returns (ElectionResponse);
  rpc stopElection(Elected) returns (ElectionResponse);
}
